# cmake_getting_started

./: CMakeCache.txt
001-hello-world/: CMakeLists.txt
002-directories/: CMakeLists.txt
002-directories/include/: MyClass.h
002-directories/src/: MyClass.cpp  main.cpp
003-shared-library/: CMakeLists.txt
003-shared-library/include/: MyClass.h
003-shared-library/src/: MyClass.cpp
004-static-library/: CMakeLists.txt
004-static-library/include/: MyClass.h
004-static-library/src/: MyClass.cpp
005-using-libraries/: CMakeLists.txt
005-using-libraries/src/: main.cpp
